added exe file and updated

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <!-- <a class="navbar-brand" href="#">Bibek</a> -->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/images/BCS_Blue_Bg.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top rounded-5"> Bibek Chand Sah </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,17 +41,17 @@
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <!-- <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bibek</h5> -->
-                    <a class="navbar-brand" href="#" class="offcanvas-title" id="offcanvasNavbarLabel">
+                    <a class="navbar-brand" href="index.html" class="offcanvas-title" id="offcanvasNavbarLabel">
                         <img src="assets/images/BCS_Blue_Bg.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top rounded-5"> Bibek Chand Sah </a>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="Download.html">Download</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Dropdown </a>
@@ -138,7 +138,7 @@
     </div>
     <!-- Recent -->
     <H3 class="border-bottom">Recent</H3>
-    <div data-aos="fade-up" class="MostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
+    <!-- <div data-aos="fade-up" class="MostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
         <div class="col itemBox">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
@@ -154,9 +154,24 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="col itemBox">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
     <!-- Most Popular -->
-    <H3 class="border-bottom">Most Popular</H3>
+    <!-- <H3 class="border-bottom">Most Popular</H3>
     <div data-aos="fade-up" class="MostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
         <div class="col itemBox">
             <div class="card mb-3" style="max-width: 540px;">
@@ -173,53 +188,148 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- testimonial-->
-    <div class="swiper">
-        <div class="col itemBox swiper-wrapper">
-            <div class="col-lg-auto swiper-slide">
-                <div class="card testimonial">
-                    <img src="https://bibek10550.github.io/kiitcse/assets/image/developer.jpg" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+        <div class="col itemBox">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
                     </div>
-                </div>
-            </div>
-            <div class="col-lg-auto swiper-slide">
-                <div class="card testimonial">
-                    <img src="https://bibek10550.github.io/bibek/assets/img/project.png" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-auto swiper-slide">
-                <div class="card testimonial">
-                    <img src="https://bibek10550.github.io/kiitcse/assets/image/developer.jpg" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-auto swiper-slide">
-                <div class="card testimonial">
-                    <img src="https://bibek10550.github.io/bibek/assets/img/project.png" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-    </div>
+    </div> -->
+    <!-- testimonial-->
+    <H3 class="border-bottom">Testimonial</H3>
+    <!-- <div class="slide-container swiper">
+        <div class="slide-content">
+            <div class="swiper-wrapper">
+                <div class="col-lg-auto swiper-slide">
+                    <div class="card testimonial">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/developer.jpg" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-auto swiper-slide">
+                    <div class="card testimonial">
+                        <img src="https://bibek10550.github.io/bibek/assets/img/project.png" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-auto swiper-slide">
+                    <div class="card testimonial">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/developer.jpg" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-auto swiper-slide">
+                    <div class="card testimonial">
+                        <img src="https://bibek10550.github.io/bibek/assets/img/project.png" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>-->
+            <!-- If we need pagination -->
+            <!-- <div class="swiper-pagination"></div> -->
+            <!-- If we need navigation buttons -->
+            <!-- <div class="swiper-button-prev swiper-navBtn"></div>
+            <div class="swiper-button-next swiper-navBtn"></div>
+        </div>
+    </div>  -->
+    <!-- Projects -->
+    <H3 class="border-bottom">Project</H3>
+    <!-- <div data-aos="fade-up" class="MostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
+        <div class="col itemBox">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col itemBox">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col itemBox">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col itemBox">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <p class="card-text">This resource hub simplifies your educational journey iuestions (PYQs), Concise Notes, Video Lectures.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- pagination-->
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <!-- <li class="page-item"><a class="page-link" href="#">2</a></li> -->
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
     <!-- footer -->
     <div data-aos="fade-up" class="container border-top">
         <footer class="py-5">
@@ -270,15 +380,15 @@
                 </div>
                 <ul class="list-unstyled d-flex footerBadge">
                     <li class="ms-3"><a href="https://www.facebook.com/bibek.sha.1432/" title="facebook"><span class="badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill mb-3">
-                                <img class="rounded-circle me-1" width="24" height="24" src="assets/image/facebook.png" alt="facebook logo">Facebook </span></a> </li>
+                                <img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/kiitcse/assets/image/facebook.png" alt="facebook logo">Facebook </span></a> </li>
                     <li class="ms-3"><a href="https://www.instagram.com/bibeksha1432/" title="instagram"><span class="badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill mb-3">
-                                <img class="rounded-circle me-1" width="24" height="24" src="assets/image/instagram.png" alt="instagram logo">Instagram </span></a></li>
+                                <img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/kiitcse/assets/image/instagram.png" alt="instagram logo">Instagram </span></a></li>
                     <li class="ms-3"><a href="/cdn-cgi/l/email-protection#b1d3d8d3d4dac2d9d08589f1d6dcd0d8dd9fd2dedc" title="Send Message"><span class="badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill mb-3">
-                                <img class="rounded-circle me-1" width="24" height="24" src="assets/image/gmail.png" alt="gmail logo">Gmail </span></a> </li>
+                                <img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/kiitcse/assets/image/gmail.png" alt="gmail logo">Gmail </span></a> </li>
                     <li class="ms-3"><a href="#" id="whatsappLink"> <span class="badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill mb-3">
-                                <img class="rounded-circle me-1" width="24" height="24" src="assets/image/share.png" alt="">Share </span></a></li>
+                                <img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/kiitcse/assets/image/share.png" alt="">Share </span></a></li>
                     <li class="ms-3"><a href="Feedback_Form.html" title="feedback"><span class="badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill mb-3">
-                                <img class="rounded-circle me-1" width="24" height="24" src="assets/image/feedback.jpeg" alt="feedback logo">Feedback </span></a></li>
+                                <img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/kiitcse/assets/image/feedback.jpeg" alt="feedback logo">Feedback </span></a></li>
                 </ul>
             </div>
         </footer>
