--- a/downloads.html
+++ b/downloads.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bibek Chand Sah</title>
+    <title>Downloads | Bibek Chand Sah</title>
     <!-- fav icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assetsfavicon/favicon-32x32.png">
@@ -65,68 +65,11 @@
     <div class="toolContainer">
         <!-- dynamic tool container 👇🏻 -->
     </div>
-    <!-- Slide section -->
-    <div id="carouselExampleCaptions" class="carousel slide pt-5" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/bibek10550.png" class="d-block w-100 img-fluid" alt="bibek10550">
-                <!-- <img src="https://source.unsplash.com/500x200/?technologies,code,laptop,artificial,intelligence,robot" class="d-block w-100 img-fluid" alt="..."> -->
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p> -->
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="assets/images/KIIT_CSE.png" class="d-block w-100 img-fluid" alt="KIIT CSE">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h5><a href="https://bibek10550.github.io/kiitcse" class="text-white">KIIT CSE</a></h5>
-                    <p>This resource hub simplifies your educational journey in Computer Science and Engineering (CSE).</p> -->
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="assets/images/Homepage.png" class="d-block w-100 img-fluid" alt="Homepage">
-                <div class="carousel-caption d-none d-md-block text-black">
-                    <!-- <h5><a href="https://bibek10550.github.io/Homepage" class="text-black">Homepage</a></h5>
-                    <p>This homepage is designed to suit your preferences and needs. It offers many features and useful items that you use every day. You can easily customize it to make it your own.</p> -->
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <!-- main section -->
-    <div class="container col-xxl-8 px-4 py-5 aos-init aos-animate">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-            <div class="col-10 col-sm-8 col-lg-6">
-                <img src="assets/images/BCS_Full.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Myself <a href="https://bibek10550.github.io/bibek">Bibek</a> Welcome you all to BCS</h1>
-                <p class="lead">your go-to destination for all things related to web development! I am a dedicated and passionate about sharing my knowledge and expertise with the world.</p>
-                <p class="lead">I am excited to be a part of your coding journey! Now, let's explore BCS together!</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start dropdown-menu border-0" style="background-color: transparent;">
-                    <a class="Developer" href="developer.html"><button class="btn btn-lg btn-outline-primary rounded-pill px-5" type="button">Developer</button></a>
-                    <a class="FeedbackForm" href="feedback.html"><button class="btn btn-lg btn-outline-primary rounded-pill px-5" type="button">Feedback</button></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Most Popular section -->
-    <H3 class="border-bottom recentHeading">Most Popular</H3>
-    <div class="MostPopularContainer mostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
-        <!--add more items 👇🏻 -->
-        <!-- <div data-aos="fade-up" class="col itemBox">
+    <!-- downloads -->
+    <H3 class="border-bottom pt-lg-5 downloadHeading">Downloads</H3>
+    <div data-aos="fade-up" class="MostPopularContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
+       <!-- items here 👇🏻 -->
+        <div data-aos="fade-up" class="col itemBox" style="z-index: 50;">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4 projectImage">
@@ -137,17 +80,20 @@
                             <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
                             <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
                         </div>
+                        <div class="btn-group float-end downloadButton" role="group">
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Download </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Android</a></li>
+                                <li><a class="dropdown-item" href="assets/KIIT CSE.exe">Window</a></li>
+                                <li><a class="dropdown-item" href="#">Linux</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div> -->
-        <!--add more items 👇🏻 -->
-    </div>
-    <!-- Recent section-->
-    <H3 class="border-bottom">Recent</H3>
-    <div class="MostPopularContainer recentContainer row row-cols-1 row-cols-md-auto g-4 mt-3">
-        <!--add more items 👇🏻 -->
-        <!-- <div data-aos="fade-up" class="col itemBox">
+        </div>
+        
+        <!-- <div data-aos="fade-up" class="col itemBox" style="z-index: 48;">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4 projectImage">
@@ -158,25 +104,19 @@
                             <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
                             <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
                         </div>
+                        <div class="btn-group float-end downloadButton" role="group">
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Download </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Android</a></li>
+                                <li><a class="dropdown-item" href="assets/KIIT CSE.exe">Window</a></li>
+                                <li><a class="dropdown-item" href="#">Linux</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div> -->
-        <!--add more items 👇🏻 -->
     </div>
-    <!-- pagination-->
-    <nav data-aos="fade-up" aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="page-1.html">1</a></li>
-            <!-- <li class="page-item"><a class="page-link" href="#">2</a></li> -->
-            <li class="page-item">
-                <a class="page-link" href="page-1.html">Next</a>
-            </li>
-        </ul>
-    </nav>
     <!-- online status toast -->
     <div class="onlineStatusToast">
         <!-- dynamic toast 👇🏻 -->
