homepage icon corrected

--- a/projects.html
+++ b/projects.html
@@ -136,7 +136,7 @@
         updateProjectData(
             // project data filter , project name, project link, project image link, project description
             "Website_Designs", "kiitcse", "https://github.com/bibek10550/kiitcse", "assets/images/projects/kiitcse.png", "Explore educational resources and materials for Computer Science and Engineering (CSE) with kiitcse, providing study materials, notes, and previous year questions (PYQs) for students.",
-            "Website_Designs", "Homepage", "https://github.com/bibek10550/homepage", "assets/images/projects/homepage.png", "Create an impressive and engaging homepage for your website with Homepage, featuring a clean and modern design that highlights key information and content.",
+            "Website_Designs", "Homepage", "https://github.com/bibek10550/Homepage", "assets/images/projects/Homepage.png", "Create an impressive and engaging homepage for your website with Homepage, featuring a clean and modern design that highlights key information and content.",
 
 
 
