"Added target="_blank" to various anchor tags to open links in new tabs."

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <img src="assets/images/BCS_Full.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
             </div>
             <div class="col-lg-6">
-                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Myself <a href="https://bibek10550.github.io/bibek">Bibek</a> Welcome you all to BCS</h1>
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Myself <a href="https://bibek10550.github.io/bibek" target="_blank">Bibek</a> Welcome you all to BCS</h1>
                 <p class="lead">your go-to destination for all things related to web development! I am a dedicated and passionate about sharing my knowledge and expertise with the world.</p>
                 <p class="lead">I am excited to be a part of your coding journey! Now, let's explore BCS together!</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start dropdown-menu border-0" style="background-color: transparent;">
